[package]
name = "lingo"
version = "0.4.0"
authors = ["Martin Sandgren <carlmartus@gmail.com>"]
edition = "2018"

[dependencies]
glutin = "0.19"
gl = "0.11"

[[example]]
name = "hello_triangle"
path = "samples/hello_triangle.rs"

[[example]]
name = "camera"
path = "samples/camera.rs"

[[example]]
name = "stride"
path = "samples/stride.rs"

[[example]]
name = "events"
path = "samples/events.rs"
