[package]
name = "lingo"
version = "0.5.0"
authors = ["Martin Sandgren <carlmartus@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14"

[dev-dependencies]
glfw = "0.41.0"

[[example]]
name = "hello_triangle"
path = "samples/hello_triangle.rs"

[[example]]
name = "camera"
path = "samples/camera.rs"

[[example]]
name = "stride"
path = "samples/stride.rs"
